--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -15,7 +15,7 @@ jobs:
             password: ${{ secrets.DOCKER_TOKEN }}
 
        - name: Docker Build
-         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/helloworld-python:latest
+         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/helloworld-python:latest .
 
        - name: Docker Push
          run: docker push ${{ secrets.DOCKER_USERNAME }}/helloworld-python:latest
